--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,4 +9,7 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/TwoHumans.TwoHumans
+GlobalDefaultGameMode=/Script/ChessUE.ChessUEGameModeBase
 
