--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Visual Studio 2015 user specific files
 .vs/
 
+# JetBrains products
+.idea/
+
 # Compiled Object files
 *.slo
 *.lo
@@ -72,3 +75,6 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# Source files for Unreal plugin in Rider
+Plugins/Developer/RiderLink
